syntax = "proto3";

option csharp_namespace = "Moonlay.MasterData.Protos";

package Moonlay;

// The greeting service definition.
service ManageOrganization {
  // New Organization
  rpc NewOrganization (NewOrganizationReq) returns (Reply);
}

service ManageDataSet {
  // New dataset
  rpc NewDataset (NewDatasetReq) returns (Reply);
  rpc RemoveDataSet (RemoveDataSetReq) returns (Reply);
  rpc AllDataSets (AllDataSetsReq) returns (AllDataSetsReply);
}

// The response message containing the greetings.
message Reply {
  bool success = 1;
  string message = 2;
}

message AllDataSetsReq {
  string domainName = 2;
}

message AllDataSetsReply {
  bool success = 1;
  repeated DataSetArg Data = 2;
}

// The request message containing the user's name.
message NewOrganizationReq {
  string name = 1;
}

// Command for create a dataset
message NewDatasetReq {
  string name = 1;
  string domainName = 2;
  string organizationName = 3;
  repeated AttributeArg attributes = 4;
}

message AttributeArg {
    string name = 1;
    string type = 2;
}

message DataSetArg {
    string name = 1;
}

message RemoveDataSetReq {
    string name = 1;
}